[tool.poetry]
name = "oauth-example"
version = "0.1.0"
description = "A simple example of ORCID OpenID JWT reused across applications."
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
starlette-oauth2-api = "^0.2.6"
authlib = "^1.3.2"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
